# aoc-2024

./: CMakeLists.txt  README.md  day1.cpp
src/: day1.cpp  day2.cpp  day3.cpp  day4.cpp
test_inputs/: day3.txt
